Ever improved embedded ext object
