# resources/ObjectExternal/TestJavaChartJS/SCRIPT.js
@@ -1,6 +1,6 @@
 var TestJavaChartJS = (function() {
 
-	function chart(spec) {
+	function displayChart(spec) {
 		try {
 			new Chart(document.getElementById("testjavachartjs-chart"), {
 				type: 'line',
@@ -25,15 +25,36 @@ var TestJavaChartJS = (function() {
 		}
 	}
 
+	function callChart(url, prm) {
+		$ui.loadCharts(function() {
+			$.ajax({
+				url: url,
+				method: "post",
+				dataType: "json",
+				data: prm
+			}).done(function(spec) {
+				displayChart(spec);
+			}).fail(function(status, err) {
+				$("testjavachartjs").text("Error: status = " + status + ", message = " + err.message);
+			})
+		});
+	}
+
 	return {
 		render: function(params) {
-			$ui.loadCharts(function() {
-				$.ajax({ url: params.baselocation, method: "post", dataType: "json", data: params.parameters }).done(function(spec) {
-					chart(spec);
-				}).fail(function(status, err) {
-					$("testjavachartjs").text("Error: status = " + status + ", message = " + err.message);
-				})
-			});
+			var url = params.baselocation;
+			var prm = params.parameters;
+			if (prm.object && prm.inst && prm.row_id) {
+				$ui.getUIObject(prm.object, prm.inst, function(obj) {
+					var start = obj.item.testjObj1Start;
+					if (start >= 0) prm.start = start;
+					var inc = obj.item.testjObj1Inc;
+					if (inc >= 0) prm.inc = inc;
+					callChart(url, prm);
+				});
+			} else {
+				callChart(url, prm);
+			}
 		}
 	};
 
